# shizuku-mcp

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  SECURITY.md  full-setup.sh  install.sh  pyproject.toml  run-server.sh  setup_boot.sh  termux-commands-reference.md
playbooks/: calendar_recurring.md
skills/android-reverse-flow/: SKILL.md
skills/android-reverse-flow/references/: reverse-workflow.md  termux-shell-patterns.md
skills/android-reverse-flow/scripts/: apktool-build-termux.sh
skills/apktool-termux-troubleshooting/: SKILL.md
skills/apktool-termux-troubleshooting/references/: common-failures.md  rebuild-loop.md
src/: artifacts.py  config.py  doctor.py  errors.py  main.py
src/android_mcp/: server.py
src/runners/: rish_runner.py  subprocess_runner.py  termux_api_runner.py
src/tools/: app_tools.py  doctor_tools.py  intent_tools.py  mega_termux_tools.py  screen_tools.py  shell_tools.py  utility_tools.py
tests/: test_config.py  test_shell_tools.py
